# support-triage-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
data/eval/: queries.jsonl  seed_tickets.jsonl
demo/: index.html  predictions.json
docs/: architecture.md  decisions.md  scalability.md
models/intent-classifier-lora/: MODEL_CARD.md  label_mapping.json  training_metrics.json
notebooks/: 01_classifier_training.py
scripts/: bake_demo_predictions.py
src/: config.py
src/agents/: drafter.py  orchestrator.py  priority_sentiment.py  triage_decision.py
src/api/: main.py  schemas.py
src/classifier/: intent_classifier.py
src/eval/: runner.py
src/retrieval/: similar_tickets.py
tests/: test_classifier_heuristic.py  test_eval_runner.py  test_health.py  test_priority_sentiment_heuristic.py  test_triage_decision.py
