[project]
name = "support-triage-agent"
version = "0.1.0"
description = "Customer Support Triage — DistilBERT+LoRA + Claude reasoning + similar-ticket retrieval"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Juan David Suárez Sánchez", email = "juadsuarezsan@unal.edu.co" }]
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "tenacity==9.0.0",
    "loguru==0.7.2",
    "anthropic==0.39.0",
    "langchain-anthropic==0.2.4",
    "langgraph==0.2.45",
    # Fine-tuning + classification
    "transformers==4.45.2",
    "torch==2.4.1",
    "peft==0.13.2",
    "accelerate==1.0.1",
    "datasets==3.0.1",
    "evaluate==0.4.3",
    "scikit-learn==1.5.2",
    # Retrieval
    "sentence-transformers==3.2.1",
    "qdrant-client==1.12.0",
    # DB
    "psycopg[binary,pool]==3.2.3",
    # Vis
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-cov==5.0.0", "pytest-asyncio==0.24.0",
       "ruff==0.6.9", "black==24.10.0", "mypy==1.11.2"]
